--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ghem-food",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://lekhang4497.github.io/ghem-food",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +49,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.5",
+    "gh-pages": "^3.1.0",
     "prettier": "2.0.5"
   }
 }
