--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/yup": "^0.29.4",
+    "axios": "^0.19.2",
     "date-fns": "^2.15.0",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0-alpha.0",
