--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://lekhang4497.github.io/ghem-food",
   "dependencies": {
+    "@auth0/auth0-react": "^1.1.0",
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
