--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "react-ga": "^3.1.2",
     "react-i18next": "^11.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2",
+    "react-scripts": "4.0.3",
+    "typescript": "3.9.10",
     "yup": "^0.29.3"
   },
   "scripts": {
@@ -66,7 +66,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.5",
-    "gh-pages": "^3.1.0",
-    "prettier": "2.0.5"
+    "gh-pages": "^3.1.0"
   }
 }
